# Homework_Module_10_PythonWEB

./: README.md
hw_05.05.2024 _SQLight/: pyproject.toml
hw_05.05.2024 _SQLight/hw_project/: db.sqlite3
hw_05.05.2024 _SQLight/hw_project/hw_project/: settings.py
hw_05.05.2024 _SQLight/hw_project/quotes/: models.py  urls.py  views.py
hw_05.05.2024 _SQLight/hw_project/quotes/templates/author/: author_create.html
hw_05.05.2024 _SQLight/hw_project/users/: forms.py  views.py
hw_05.05.2024 _SQLight/hw_project/users/templates/users/: login.html  signup.html
